# big-data-challenge-fiap

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.github/agents/: dotnet_developer.agent.md  machine_learning.agent.md
configs/: model_config.yaml
docs/: COMMIT-CONVENTIONS.md  NOTEBOOKS.md  REQUIREMENTS.md  api-conventions.md  design-pattern.md  naming-conventions.md
models/: MODEL_CARD.md
models/baseline_popularity/: metrics.json
models/evaluation/: metrics_comparison.csv
models/item_based_cf/: metrics.json
models/matrix_factorization/: item_factors.npy  metrics.json
models/neural_network/: metrics.json
models/user_based_cf/: metrics.json
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_baseline_popularity.ipynb  04_item_based_cf.ipynb  05_user_based_cf.ipynb  06_matrix_factorization.ipynb  07_ncf_training.ipynb  08_model_comparison.ipynb
src/api/: config.py  dependencies.py  main.py
src/api/middleware/: error_handler.py
src/api/routes/: health.py  recommendations.py
src/api/schemas/: errors.py  request.py  response.py
src/api/services/: recommendation_service.py
src/api/utils/: logger.py
src/evaluation/: metrics.py  ranking.py
src/models/: inference.py  item_based_cf.py  model_loader.py  ncf.py  popularity.py  recommender.py
tests/: conftest.py  test_api.py  test_inference.py  test_item_based_cf.py  test_model_loader.py  test_popularity.py  test_recommendation_service.py
