[project]
name = "big-data-challenge-fiap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
